--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
       <h1 class="contact-heading">Contact Us</h1>
       <p class="contact-caption">Please fill out the form below to contact</p>
 
-      <form action="contactsave.php" style="background: rgba(222, 237, 253, 0.714);
+      <form action="contactsave_db.php" style="background: rgba(222, 237, 253, 0.714);
     box-shadow: var(--box-shadow);" method="post">
 
          <div class="container">
